# embedded-fatfs

sdspi/: Cargo.toml
sdspi/src/: lib.rs
