[package]
name = "sdspi"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned = "0.4.2"
block-device-driver = "0.2.0"
embassy-futures = "0.1.1"
embedded-hal = "1"
embedded-hal-async = "1"
embedded-io-async-06 = { package = "embedded-io-async", version = "0.6", optional = true }
embedded-io-async-07 = { package = "embedded-io-async", version = "0.7", optional = true }
sdio-host = "0.9.0"

log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

[features]
# enable log support
log = ["dep:log"]
# enable defmt support
defmt = ["dep:defmt", "embedded-io-async-06?/defmt-03", "embedded-io-async-07?/defmt"]
embedded-io-async-06 = ["dep:embedded-io-async-06"]
embedded-io-async-07 = ["dep:embedded-io-async-07"]
